<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/created_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/justkrated_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/justkrated_logo"
            app:layout_constraintTop_toBottomOf="@id/created_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/justkrated" />

        <TextView
            android:id="@+id/textAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="36dp"
            android:text="@string/display_agreement"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/version" />

        <TextView
            android:id="@+id/link_privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/link_privacy"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/vertical_midpoint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAgree" />

        <TextView
            android:id="@+id/link_tos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/link_tos"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_midpoint"
            app:layout_constraintTop_toBottomOf="@id/textAgree" />

        <Button
            android:id="@+id/rateButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/rate_us"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/feedbackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_privacy"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/closeButton"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/closeButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Trivial Quotes 1.2. JustKrated 2021"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/justkrated_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_midpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>